# neo-skill

./: .dependency-cruiser.js  .eslintrc.cjs  .gitignore  .npmignore  AGENTS.md  DESIGN_SKILL_FINDER.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SKILL_FINDER_USAGE.md  VERIFICATION_REPORT.md  package-lock.json  package.json  pyproject.toml  readme.txt  test_skill_finder.py  test_uiux_skill.py
.claude/: readme.txt
.claude/skills/: readme.txt
.cursor/: readme.txt
.cursor/commands/: coding-standards.md  readme.txt  skill-creator.md
.github/: README.md  readme.txt
.github/skills/: readme.txt
.github/workflows/: README.md  ci.yml
.shared/: README.md  readme.txt
.shared/review-gate/: README.md
.shared/skill-creator/: README.md  readme.txt
.windsurf/: readme.txt
.windsurf/workflows/: coding-standards.md  readme.txt  skill-creator.md
docs/: ARCHITECTURE_RULES.md  INSTALL_SPACE_EXAMPLE.md  README.md  design.md  readme.txt
docs/skill-creator-refactoring/: DIRECTORY_STRUCTURE.md  END_TO_END_DEMO.md  LIBRARY_RECOMMENDATION.md  README.md  SUMMARY.md
skills/: README.md  readme.txt
skills/coding-standards/: readme.txt  skillspec.json
skills/hard-gate/: skillspec.json
skills/neo-capability-boundary-governance/: SKILL.md
skills/neo-cpp-refactor/: SKILL.md
skills/neo-mail-assistant/: SKILL.md  evidence.jsonl  evidence_digest.md  persona.md  sources.json  work.md
skills/neo-task-governance/: SKILL.md
skills/review-gate/: README.md  skillspec.json
src/: README.md  readme.txt
src/omni_skill/: cli.py  (+4 more)
tools/: build_third_party_indexes.py  lint_third_party_registry.py  sync-to-codex-skills.ps1  validate-skills.ps1
(+218 files in other folders)
