[build-system]
requires = ["setuptools>=56"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-skill"
version = "0.1.11"
description = "A multi-assistant skill generator (Claude/Windsurf/Cursor/GitHub Skills) driven by a canonical SkillSpec."
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "skill-creator"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

