[build-system]
requires = ["setuptools>=56"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-skill"
dynamic = ["version"]
description = "A multi-assistant skill generator (Claude/Windsurf/Cursor/GitHub Skills) driven by a canonical SkillSpec."
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "skill-creator"}]

[project.scripts]
omni-skill = "omni_skill.cli:main"
skill-creator = "skill_creator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "skill_creator.__version__"}

